tests/ui/imports/import2.stderr
error[E0432]: unresolved import `baz::zed`
  --> $DIR/import2.rs:1:10
   |
LL | use baz::zed::bar;
   |          ^^^ could not find `zed` in `baz`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
